--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,4 @@
-/**
- * =================================================================== 
- *
- *  Kards v1.0 Main Stylesheet
- *  url: styleshout.com
- *  03-01-2016
- *  ------------------------------------------------------------------
- *  TOC:
+/*  TOC:
  *  01. webfonts and iconfonts
  *  02. base style overrides
  *  03. typography & general theme styles
@@ -1102,7 +1095,7 @@ header .top-bar {
 	min-width: 220px;
 	min-height: 66px;
 	position: absolute;
-	left: 90px;
+	left: -10px;
 	top: 0;
 }
 header .logo {
@@ -1132,9 +1125,10 @@ header .logo a {
  */
 .menu-toggle {
 	float: left;
+	padding-left: -100;
 	width: 40px;
 	height: 40px;
-	margin-left: 20px;
+	
 	margin-top: 13px;
 	display: block;
 	position: relative;
@@ -1948,10 +1942,15 @@ header .logo a {
  *
  * ------------------------------------------------------------------- 
  */
+#contact .contactname h1{
+	font-size: 5.0rem;
+	color: white;
+	padding-bottom: 5rem;
+	font-family: Arial, Helvetica, sans-serif;
+}
 #contact {
 	background: #151515;
-	padding-top: 12rem;
-	padding-bottom: 7.2rem;
+	
 }
 #contact .section-intro h1 {
 	color: white;
