--- a/css/main.css
+++ b/css/main.css
@@ -1095,7 +1095,7 @@ header .top-bar {
 	min-width: 220px;
 	min-height: 66px;
 	position: absolute;
-	left: -100px;
+	left: -10px;
 	top: 0;
 }
 header .logo {
@@ -1115,7 +1115,7 @@ header .logo a {
 	color: transparent;
 	width: 70px;
 	height: 50px;
-	background: url("../images/logo.png") no-repeat center;
+/* 	background: url("../images/logo.png") no-repeat center; */
 	background-size: 90px 61px;
 }
 
